--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "prebuild": "CI=true react-scripts test --colors",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "now --prod ./build",
     "serve": "serve -s build",
     "preserve": "npm run build"
   },
